tests/miniJava/neg/005496_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { int [] 0 java ; }
